# app/Http/Controllers/FriendController.php
@@ -12,6 +12,47 @@ class FriendController extends BaseController
 {
 
 
+
+
+    /**
+     * @SWG\Post(
+     *   path="/friends",
+     *   tags={"Friends"},
+     *   summary="Adds a friend by username.",
+     *   @SWG\Parameter(
+     *       name="friend",
+     * 		 in="body",
+     * 		 required=true,
+     * 		 @SWG\Schema(ref="#/definitions/AddFriend"),
+     *	 ),
+     *   @SWG\Parameter(
+     *       name="token",
+     * 		 in="header",
+     * 		 required=true,
+     *       type="string"
+     *	 ),
+     *   @SWG\Response(
+     *     response=200,
+     *     description="Added friend.",
+     *     @SWG\Schema(ref="#/definitions/Friend")
+     *   ),
+     *   @SWG\Response(
+     *     response=401,
+     *     description="unauthorized, invalid token, missing token, expired token.",
+     *     @SWG\Schema(@SWG\Property(property="message", type ="string"))
+     *   ),
+     *   @SWG\Response(
+     *     response=400,
+     *     description="Already friends with user.",
+     *     @SWG\Schema(@SWG\Property(property="parameter_name", type ="string", default="error message"))
+     *   ),
+     *   @SWG\Response(
+     *     response=404,
+     *     description="Unable to find friend by username",
+     *     @SWG\Schema(@SWG\Property(property="message", type ="string", default="error message"))
+     *   )
+     * )
+     */
     public function AddFriend(Request $request)
     {
         $this->validate($request, [
@@ -43,6 +84,46 @@ class FriendController extends BaseController
         return Friend::where('id1', $user->id)->where('id2', $friend->id)->with(['user1', 'user2'])->first();
     }
 
+
+
+    /**
+     * @SWG\Delete(
+     *   path="/friends",
+     *   tags={"Friends"},
+     *   summary="Deletes a friend by username.",
+     *   @SWG\Parameter(
+     *       name="friend",
+     * 		 in="body",
+     * 		 required=true,
+     * 		 @SWG\Schema(ref="#/definitions/AddFriend"),
+     *	 ),
+     *   @SWG\Parameter(
+     *       name="token",
+     * 		 in="header",
+     * 		 required=true,
+     *       type="string"
+     *	 ),
+     *   @SWG\Response(
+     *     response=204,
+     *     description="successfully deleted friend.",
+     *   ),
+     *   @SWG\Response(
+     *     response=401,
+     *     description="unauthorized, invalid token, missing token, expired token.",
+     *     @SWG\Schema(@SWG\Property(property="message", type ="string"))
+     *   ),
+     *   @SWG\Response(
+     *     response=404,
+     *     description="Unable to find friend by username.",
+     *     @SWG\Schema(@SWG\Property(property="parameter_name", type ="string", default="error message"))
+     *   ),
+     *   @SWG\Response(
+     *     response=400,
+     *     description="Not friends with user with the display name.",
+     *     @SWG\Schema(@SWG\Property(property="message", type ="string", default="error message"))
+     *   )
+     * )
+     */
     public function DeleteFriend(Request $request)
     {
         $this->validate($request, [
@@ -72,6 +153,33 @@ class FriendController extends BaseController
 
     }
 
+
+
+    /**
+     * @SWG\Get(
+     *   path="/friends",
+     *   tags={"Friends"},
+     *   summary="lists all friends for current user",
+     *   @SWG\Parameter(
+     *       name="token",
+     * 		 in="header",
+     * 		 required=true,
+     *       type="string"
+     *	 ),
+     *   @SWG\Response(
+     *     response=200,
+     *     description="A list with friends",
+     *     @SWG\Schema(
+     *          type="array",
+     *          @SWG\Items(ref="#/definitions/Friend")
+     *      )
+     *   ),
+     *   @SWG\Response(
+     *     response=404,
+     *     description="no friends in table, or an error."
+     *   )
+     * )
+     */
     public function GetFriends()
     {
         //todo add with user to query
